--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -23,7 +23,7 @@
   scanf는 해당 주소에 입력 값을 저장합니다.
   
 - ⚠️ MSVC에서 보안 문제로 인해 경고를 발생시키는데, 경고를 무시하고 기존 C 표준 함수를 사용하고 싶다면, 매크로를 정의해야 함.  
-  > a) #define _CRT_SECURE_NO_WARNINGS (macro)
+  > a) #define _CRT_SECURE_NO_WARNINGS (macro)  
   > b) project - properties - preprocessor - debug & release 모두 Definition에 _CRT_SECURE_NO_WARNINGS 입력
 
 - GCC와 호환이 안됨 : GCC는 _CRT_SECURE_NO_WARNINGS와 같은 MSVC 전용 매크로를 인식하지 않습니다.
@@ -81,8 +81,8 @@ int main()
   메모리를 아끼기 위해 또는 정밀도가 덜 중요한 경우 float 사용 (4바이트)  
   float은 double의 절반 크기로 메모리 효율이 좋음
   
-- `float은 sign exponent fraction ~~(mantissa)~~ 으로 구성됨` (float은 unsigned가 없음)  
-  > Fraction : Signiticand 중에서 소수점 아래 부분
+- `float은 sign exponent fraction으로 구성됨` (float은 unsigned가 없음)  
+  Fraction : Signiticand 중에서 소수점 아래 부분
 
 - 부동소수점 표준 방식 (https://www.geeksforgeeks.org/ieee-standard-754-floating-point-numbers/)
 
@@ -172,26 +172,24 @@ int main()
     printf("int_max : %i\n", i_max);  // 2147483647
     printf("int_max + 1 : %i\n", i_max1);  //-2147483648
 ```
-- ✅ UINT_MAX에서 F12(go to definition)로 직접 확인해보자. (UINT_MIN이 0이라 없고, INT_MAX, INT_MIN define 확인 가능.)
+
+- UINT_MAX에서 F12(go to definition)로 직접 확인해보자. (UINT_MIN이 0이라 없고, INT_MAX, INT_MIN define 확인 가능.)
+
 - char buffer[33];  
   문자를 33개 메모리에 나란히 저장할 수 있는 배열을 선언.  
   4byte * 8bit = 32bit인데 +1 해서 33을 사용하는 이유는??
 
-- ⭐ **Overflow** : 32비트로 표현 가능한 최대값에 1을 더하면, 비트 수가 33개로 늘어나게 되지만 32비트 시스템에서는 이를 표현할 수 없으므로, 최상위 비트는 버려지고 값은 다시 0으로 돌아옵니다. 이 현상을 오버플로우라고 하며, 32비트 시스템에서는 더 이상 표현할 수 없는 값을 0으로 되돌리는 결과를 초래합니다.  
+- Overflow : 32비트로 표현 가능한 최대값에 1을 더하면, 비트 수가 33개로 늘어나게 되지만 32비트 시스템에서는 이를 표현할 수 없으므로, `최상위 비트는 버려지고 값은 다시 0으로 돌아옵니다.` 이 현상을 `오버플로우`라고 하며, 32비트 시스템에서는 더 이상 표현할 수 없는 값을 0으로 되돌리는 결과를 초래합니다.  
   > ex) if 4bit,  
   > 1111 + 1 = 1 0000  -->  UINT_MAX + 1 -> 0  
   > 1 0000 - 1         -->  0 -1         -> 4294967295
 
 
 ### 📌 3.7 다양한 정수형들
-- 정수 자료형  
+- 정수 자료형
+
 <img width="488" alt="Image" src="https://github.com/user-attachments/assets/287ae227-2e59-44be-9ff0-957d13da1421" />
 
-- > hhd / hhu (c)  
-  > hd / hu  
-  > d or i / u  
-  > ld / lu  
-  > lld / llu
 ``` c
 #include <stdio.h>
 #include <stdlib.h>
@@ -223,6 +221,7 @@ int main()
 
 ### 📌 3.8 8진수와 16진수
 - RGB color code는 16진수. ex) #33CC99
+
 ``` c
 #include <stdio.h>
 
@@ -251,7 +250,7 @@ int main()
 
 ### 📌 3.9 고정 너비 정수(Fixed-width Integers) 🔥🔥
 - 왜 필요해?  
-  `이식성`: 다른 운영체제나 컴파일러에서도 같은 크기의 메모리를 사용하도록 보장 (멀티 플랫폼 대비)  
+  `이식성`: `다른 운영체제나 컴파일러에서도 같은 크기의 메모리를 사용하도록 보장` (멀티 플랫폼 대비)  
   `일관성`: 변수의 크기가 예측 가능해서 메모리 관리가 수월함
 
 ``` c
@@ -278,23 +277,25 @@ int main()
 }
 ```
 - int: 시스템이나 컴파일러에 따라 크기가 달라질 수 있음 (예: 4바이트 또는 8바이트)  
-  int32_t: 항상 32비트(4바이트) 고정  
-- ⚠️ **int32_t는 stdint.h에서 플랫폼에 맞게 typedef로 정의됨.**
+  int32_t: 항상 32비트(4바이트) 고정
+  
+- ⚠️ `int32_t는 stdint.h에서 플랫폼에 맞게 typedef로 정의됨.`
   <img width="600" alt="Image" src="https://github.com/user-attachments/assets/ae5f203d-7ae7-4650-874e-edd8cba47d75" />
 
-- printf할 때, int32_t와 대응되는 format specifier가 %hd인지 %d인지는 <inttypes.h>에 정리가 되어 있다.  
+- printf할 때, int32_t와 대응되는 format specifier가 %hd인지 %d인지는 `<inttypes.h>`에 정리가 되어 있다.  
   <img width="85" alt="Image" src="https://github.com/user-attachments/assets/4a2cabdb-2035-4b7f-9b92-3f9793b9144f" />  
   <img width="184" alt="Image" src="https://github.com/user-attachments/assets/53d617cd-ae41-4963-b6a9-1a2f97de7a48" />
   
 
 ### 📌 3.10 문자 
-- ASCII Chart : 문자도 숫자로 모두 바꿔서 저장하고 처리한다.  
+- ASCII Chart : `문자도 숫자로 모두 바꿔서 저장하고 처리`한다.  
   <img width="450" alt="Image" src="https://github.com/user-attachments/assets/7d5376fd-b85b-4fbf-9083-e68dbbc4de50" />  
   https://en.cppreference.com/w/cpp/language/ascii
+  
 ``` c
     // ASCII chart
     char c = 'A';
-    char d = 65;// d = 'A'
+    char d = 65;  // d = 'A'
     char e = '*';
 
     printf("%c %hhd\n", c, c);  // A 65
@@ -303,7 +304,9 @@ int main()
 
     //printf("%c \n", c + 1);  // B
 ```
+
 - backslash 뒤에 8, 16진수 숫자 변경 후 확인
+  
 ``` c
     // escape sequence (\a : beep)
     //char a = '\a';
@@ -313,8 +316,10 @@ int main()
     //printf("\x7");
     //printf("x23");
 ```
+
 - scanf에서 활용되는 \b  
-  \b는 커서 이동만 하고 문자를 삭제하지 않고, 덮어쓰기 방식으로 기존 내용을 대체합니다.
+  `\b는 커서 이동`만 하고 문자를 삭제하지 않고, 덮어쓰기 방식으로 기존 내용을 대체합니다.
+
 ``` c
     // \b -> cursor 이동
     float salary;
@@ -322,25 +327,33 @@ int main()
     printf("$______\b\b\b\b\b\b");
     scanf("%f", &salary);
 ```
-- 줄 맞추기 /t
+
+- `줄 맞추기 /t`
+
 ``` c
     printf("AB\tCDEF\n");  // AB      CDEF
     printf("ABC\tDEF\n");  // ABC     DEF
 ```
+
 - printf 특수문자
+
 ``` c
     printf("\\ \'HA+\' \"Hello\" \?\n");  // \ 'HA+' "Hello" ?
 ```
 
 
 ### 📌 3.11 부동소수점형(Floating-Point Types)
-- 실수를 부동소수점 자료형으로 저장할 떄 아래와 같은 형태로 바꿔서 저장  
+- 실수를 부동소수점 자료형으로 저장할 때 아래와 같은 형태로 바꿔서 저장  
   Normalized significand : 1.xxx * 2^n
+
 - exponent가 0일때와 255일때는 다른 목적으로 사용됨  
   <img width="500" alt="Image" src="https://github.com/user-attachments/assets/0b52c3ee-c2b0-4c32-aebf-1c8b5119a631" />
+
 - 부동소수점은 sign 1bit exponent 8bits fraction 23bits 으로 메모리를 나눠서 사용하기 때문에 예기치 못한 문제가 생길 수도 있다(?)
+
 - 4byte 정수 범위는 10^9이지만, 4byte 부동소수점수 범위는 10^38이다.  
-  하지만, 정밀도로 보장할 수 있는 숫자가 10진수 유효숫자 6개로 한정된다.
+  하지만, `정밀도로 보장할 수 있는 숫자가 10진수 유효숫자 6개로 한정`된다.
+
 ``` c
 #include <stdio.h>
 #include <float.h>
