--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -1,9 +1,8 @@
 ### 📌 4.1 문자열 입출력하기
-- %c -> %s(string으로 변경)
+- %c -> `%s`(string으로 변경)
 - 일반적인 char fruit_name이었으면, &fruit_name으로 주소를 가져왔겠지만,  
-	fruit_name[40]은 char type 40개 메모리 공간을 대표하는 주소가 되어버리기 때문에 &(ampersand) 삭제
-
-	> C에서 배열의 이름(변수명) 자체가 배열의 첫 번째 요소의 주소를 의미
+	fruit_name[40]은 char type 40개 메모리 공간을 대표하는 주소가 되어버리기 때문에 &(ampersand) 삭제  
+  `C에서 배열의 이름(변수명) 자체가 배열의 첫 번째 요소의 주소를 의미`
 ``` c
 #include <stdio.h>
 
@@ -23,11 +22,11 @@ int main()
 
 
 ### 📌 4.2 sizeof()
-1. sizeof basic types
-- 자료형이 차지하는 메모리의 크기 확인 가능 / 함수가 아니라 연산자.  
+1. `sizeof()` basic types
+- `자료형이 차지하는 메모리의 크기 확인` 가능 / 함수가 아니라 `연산자`.  
   기본적으로 unsigned int로 해결이 가능.(-1개는 아니니까.)
 - size_t : portable type  
-  sizeof가 알려주는 사이즈가 unsigned int가 아닐 수도 있어서 size_t를 사용 (이식성)
+  sizeof가 알려주는 사이즈가 unsigned int가 아닐 수도 있어서 `size_t`를 사용 (이식성)
 ``` c
 #include <stdio.h>
 #include <stdlib.h> // malloc()
