--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -24,7 +24,7 @@ int main()
 ### 📌 4.2 sizeof()
 1. `sizeof()` basic types
 - `자료형이 차지하는 메모리의 크기 확인` 가능 / 함수가 아니라 `연산자`.  
-  기본적으로 unsigned int로 해결이 가능.(-1개는 아니니까.)
+  기본적으로 unsigned int로 해결이 가능. (-1개는 아니니까.)
 - size_t : portable type  
   sizeof가 알려주는 사이즈가 unsigned int가 아닐 수도 있어서 `size_t`를 사용 (이식성)
 ``` c
@@ -46,7 +46,8 @@ int main()
 - int 타입의 30개 요소를 저장할 수 있는 배열 int_arr를 선언한다.  
   (extern이 없는 경우, 선언 = 정의 의미 동일)  
   int_arr는 배열 전체의 크기를 알고 있음  
-  int_ptr은 그냥 포인터일 뿐, 배열의 크기를 모름  
+  int_ptr은 그냥 포인터일 뿐, 배열의 크기를 모름
+  `변수 앞에 *(asterisk)는 포인터.`
   <img width="500" src="https://github.com/user-attachments/assets/27ef9513-b8c7-4345-ad34-d61518d1cd9a"/>
 ``` c
 	int  int_arr[30]; // int_arr[0] = 1024; ...
@@ -58,7 +59,7 @@ int main()
 ```
 
 3. sizeof character array
--  char만 maximally 9 character + '/0' (null character)
+-  char만 maximally 9 character + `'/0' (null character)`
 ``` c
 	char c = 'a';  // save 97 about ASCII code
 	char string[10]; // maximally 9 character + '/0' (null character)
@@ -120,7 +121,7 @@ int main()
 
 
 ### 📌 4.4 strlen() 함수 (string length)
-- strlen() 함수의 반환값은 size_t 타입이므로, 표준 format specifier가 %zu  
+- `strlen() 함수의 반환값은 size_t 타입`이므로, 표준 format specifier가 `%zu`  
   null은 빼고, 실제 글자수만 count.
 ``` c
 #include <stdio.h>
@@ -150,15 +151,15 @@ int main()
 }
 ```
 - memory allocation (메모리 할당)  
-  malloc()(`동적 메모리 할당 함수`)을 호출하면 Heap 영역에서 100개의 char를 저장할 공간을 할당합니다. (sizeof(char) = 1)  
-  malloc()의 반환값은 void 타입(제네릭 포인터)이라서, char*로 형 변환(casting)해야 합니다.  
-  malloc()이 성공하면 `할당된 메모리의 시작 주소를 str5에 저장`합니다.  
+  `malloc()(동적 메모리 할당 함수)`을 호출하면 Heap 영역에서 100개의 char를 저장할 공간을 할당합니다. (sizeof(char) = 1)  
+  malloc()의 반환값은 `void 타입`(제네릭 포인터)이라서, `char*로 형 변환(casting)`해야 합니다.  
+  malloc()이 성공하면 할당된 메모리의 시작 주소를 str5에 저장합니다.  
   (str5는 char 타입을 가리키는 포인터 변수로, 문자열(또는 문자 배열)의 시작 주소를 저장할 수 있음)  
-  이제 str5를 통해 `할당된 메모리에 접근`하여 `문자열을 저장`할 수 있습니다.
+  이제 str5를 통해 할당된 메모리에 접근하여 문자열을 저장할 수 있습니다.
 
 
 ### 📌 4.5 기호적 상수와 전처리기(Symbolic constant & #define)
-- `#define PI 3.141592f` vs `const float PI = 3.141592f;`  
+- #define PI 3.141592f vs `const float PI = 3.141592f;`  
   일반적으로 const를 사용하는 것이 좋음.  
   #define은 단순 치환이라 타입 체크 불가능하고 디버깅이 어렵다.  
   const는 안전하고 유지보수하기 좋음.  
