--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -217,16 +217,15 @@ int main()
 ### 📌 4.7 printf() 함수의 변환 지정자들(conversion specifiers)
 - Format specifier = 전체 형식 지정 문자열  
   Conversion specifier = format specifier 안에서 데이터 변환을 담당하는 부분  
-  > 엄밀히 보면 다른 개념이지만, 보통 같은 의미로 통용되는 경우가 많다.
-- %g, %G는 알아서 더 짧은 것으로 선택해준다.  
+  `엄밀히 보면 다른 개념이지만, 보통 같은 의미로 통용되는 경우가 많다.`
+- real number에서 %g, %G는 알아서 더 짧은 것으로 선택해준다.  
   <img width="500" src="https://github.com/user-attachments/assets/c7eeda18-d77f-45ff-8868-565328f00f63"/>  
   <img width="500" src="https://github.com/user-attachments/assets/0a6999d3-26b8-40c4-a2d5-336c90a133be"/>
-
 - float %f ? double %lf ?  
   <img width="600" src="https://github.com/user-attachments/assets/88e193c3-dbb4-42b9-8ae2-78f9a5fd953e" />  
   1. printf()에서는 %f와 %lf가 동일한 이유  
-     C에서 printf()는 가변 인수 함수 (variadic function) 야.  
-     가변 인수 함수에서는 `float이 자동으로 double로 변환됨` (이걸 "default argument promotion" 이라고 해).  
+     `C에서 printf()는 가변 인수 함수 (variadic function)` 야.  
+     가변 인수 함수에서는 `float이 자동으로 double로 변환됨` (이걸 `"default argument promotion"` 이라고 해).  
      즉, printf("%f", f);에서 f는 내부적으로 double로 변환되어서 넘어감.  
      그래서 printf()에서는 %f와 %lf가 결과적으로 동일하게 동작함.  
   2. scanf()에서는 반드시 %lf를 써야 하는 이유  
