--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -232,7 +232,6 @@ int main()
      scanf()는 `인자로 전달된 포인터의 타입을 그대로 사용해 데이터를 저장`함.  
      double을 저장할 공간이 8바이트인데, %f를 쓰면 scanf()는 4바이트(float)만 읽고 저장하려고 함.  
      하지만 double이 실제로는 8바이트를 차지하기 때문에 메모리 오류가 발생할 가능성이 있음.  
-
 ``` c
 #include <stdio.h>
 #include <limits.h>
@@ -332,9 +331,7 @@ int main()
 
 
 ### 📌 4.9 printf() 함수가 인자(Argument)들을 해석하는 과정
-
-<img width="600" alt="image" src="https://github.com/user-attachments/assets/ffc499de-4081-4349-b082-0e6fd11c60bb" />
-
+- <img width="600" alt="image" src="https://github.com/user-attachments/assets/ffc499de-4081-4349-b082-0e6fd11c60bb" />
 ``` c
 #include <stdio.h>
 
@@ -355,7 +352,6 @@ int main()
 	return 0;
 }
 ```
-
 - in x86,  
   printf("%d %d %d\n\n", n1, n2, n3);
   memory size가 맞지 않아서 밀린다. -> "밀린다"는 게 무슨 뜻?
@@ -364,18 +360,14 @@ int main()
   이 과정에서 주소 오프셋(데이터 읽는 위치)이 틀어지면서 뒤의 값도 잘못 출력됨.
   printf("%lld %lld %d\n\n", n1, n2, n3);
   memory size는 맞으니까, n3는 정상적으로 출력됨.
-
 - (x64)64bit 환경은 8byte씩 읽는 시스템입니다. 노란색으로 칠해져 있는 부분이 아래부터 각각 n1, n2, n3에 대응하여 출력됩니다. 8byte단위로 읽되 %d 때문에 이 8byte 중 4byte만 읽게 되는 것입니다. 그래서 이 값이 n1 에 들어갑니다. n2는 다음 8byte 단위 부분부터 %d로 인해 4byte읽게 되는 것이구요. `8byte 단위로 끊어 읽고 이 8byte에서 %d로 인해 4byte씩 읽게 되므로` 1024인 n3은 이에 영향받지 않고 그대로 출력될 수 있었던 것입니다.  
 (x32)32bit 환경은 4byte씩 읽는 시스템입니다. 분홍색으로 칠해져 있는 부분이 아래부터 각각 n1, n2, n3에 들어갑니다. 4byte 단위로 읽기 때문에 이와 같이 들어가는 것입니다.
-
-<img width="400" alt="{C0F9108F-6034-4ACE-A2B4-908A8BF6D30A}" src="https://github.com/user-attachments/assets/201ff777-953f-4a29-bf35-6e2075455466" />
+- <img width="400" alt="{C0F9108F-6034-4ACE-A2B4-908A8BF6D30A}" src="https://github.com/user-attachments/assets/201ff777-953f-4a29-bf35-6e2075455466" />
 
 
 ### 📌 4.10 scanf() 함수의 사용법
-
-<img width="700" src="https://github.com/user-attachments/assets/3fa0dac3-a223-4485-a97c-6f10736c6335" />
-<img width="700" src="https://github.com/user-attachments/assets/5e3e9f19-de03-423a-b4d8-a3661b8d66ab" />
-
+- <img width="700" src="https://github.com/user-attachments/assets/3fa0dac3-a223-4485-a97c-6f10736c6335" />  
+  <img width="700" src="https://github.com/user-attachments/assets/5e3e9f19-de03-423a-b4d8-a3661b8d66ab" />
 ``` c
 #include <stdio.h>
 #include <inttypes.h> // intmax_t
