--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -291,7 +291,7 @@ we owe this to everyone who's not in this room to try.\n");  // 편집을 위한
   <img width="700" alt="image" src="https://github.com/user-attachments/assets/ac967758-5c00-4eef-b10c-05de4e67bf82" />  
   <img width="700" alt="image" src="https://github.com/user-attachments/assets/8eec2d7a-7efb-4d11-9ea3-b503ef392881" />  
   <img width="700" alt="image" src="https://github.com/user-attachments/assets/ce8ce7c9-8fa8-46e5-8957-33a1e4dfae53" />  
-- %c의 인수는 char가 아니라 int가 되는 이유 : 기본 인수 승격 (Default Argument Promotion)
+- %c의 인수는 char가 아니라 int가 되는 이유 : `기본 인수 승격 (Default Argument Promotion)`  
   C에서 가변 인수 함수(printf 같은 함수)에 char, short 같은 작은 크기의 타입을 전달하면, 자동으로 int로 변환됨.  
 ``` c
 #include <stdio.h>
@@ -339,29 +339,34 @@ int main()
 {   
 	float	n1 = 3.14;	// 4 bytes
 	double	n2 = 1.234;	// 8 bytes
-	int		n3 = 1024;	// 4 bytes
+	int	n3 = 1024;	// 4 bytes
 
-	printf("%f %f %d\n\n", n1, n2, n3);                           //3.140000 1.234000 1024
+	printf("%f %f %d\n\n", n1, n2, n3);             //3.140000 1.234000 1024
 
 	//Note the warnings in output window
 	printf("%d %d %d\n\n", n1, n2, n3);		// 4, 4, 4 (N, N, N)  //1610612736 -927712936 1024(?)
-	printf("%lld %lld %d\n\n", n1, n2, n3);	// 8, 8, 4 (N, N, Y)  //4614253070451212288 4608236261112822104 1024
+	printf("%lld %lld %d\n\n", n1, n2, n3);  	// 8, 8, 4 (N, N, Y)  //4614253070451212288 4608236261112822104 1024
 	printf("%f %d %d\n\n", n1, n2, n3);		// 8, 4, 4 (Y, N, N)  //3.140000 -927712936 1024(?)
-	printf("%f %lld %d\n\n", n1, n2, n3);	// 8, 8, 4 (Y, N, Y)  //3.140000 4608236261112822104 1024
+	printf("%f %lld %d\n\n", n1, n2, n3);	        // 8, 8, 4 (Y, N, Y)  //3.140000 4608236261112822104 1024
 
 	return 0;
 }
 ```
 - in x86,  
   printf("%d %d %d\n\n", n1, n2, n3);
-  memory size가 맞지 않아서 밀린다. -> "밀린다"는 게 무슨 뜻?
+  `memory size가 맞지 않아서 밀린다.` -> "밀린다"는 게 무슨 뜻?
   printf는 가변 인자 함수라서, 데이터를 스택(stack)에 순서대로 저장한 후 차례로 꺼내서 출력함.
   그런데, 잘못된 서식 지정자(%d)를 사용하면, 데이터 크기가 맞지 않아서 출력이 엉망이 됨.
   이 과정에서 주소 오프셋(데이터 읽는 위치)이 틀어지면서 뒤의 값도 잘못 출력됨.
   printf("%lld %lld %d\n\n", n1, n2, n3);
   memory size는 맞으니까, n3는 정상적으로 출력됨.
-- (x64)64bit 환경은 8byte씩 읽는 시스템입니다. 노란색으로 칠해져 있는 부분이 아래부터 각각 n1, n2, n3에 대응하여 출력됩니다. 8byte단위로 읽되 %d 때문에 이 8byte 중 4byte만 읽게 되는 것입니다. 그래서 이 값이 n1 에 들어갑니다. n2는 다음 8byte 단위 부분부터 %d로 인해 4byte읽게 되는 것이구요. `8byte 단위로 끊어 읽고 이 8byte에서 %d로 인해 4byte씩 읽게 되므로` 1024인 n3은 이에 영향받지 않고 그대로 출력될 수 있었던 것입니다.  
-(x32)32bit 환경은 4byte씩 읽는 시스템입니다. 분홍색으로 칠해져 있는 부분이 아래부터 각각 n1, n2, n3에 들어갑니다. 4byte 단위로 읽기 때문에 이와 같이 들어가는 것입니다.
+- `(x64)64bit 환경은 8byte씩 읽는 시스템`입니다.
+  노란색으로 칠해져 있는 부분이 아래부터 각각 n1, n2, n3에 대응하여 출력됩니다.
+  8byte단위로 읽되 %d 때문에 이 8byte 중 4byte만 읽게 되는 것입니다.
+  그래서 이 값이 n1 에 들어갑니다. n2는 다음 8byte 단위 부분부터 %d로 인해 4byte읽게 되는 것이구요.
+  `8byte 단위로 끊어 읽고 이 8byte에서 %d로 인해 4byte씩 읽게 되므로` 1024인 n3은 이에 영향받지 않고 그대로 출력될 수 있었던 것입니다.  
+- `(x32)32bit 환경은 4byte씩 읽는 시스템`입니다.  
+  분홍색으로 칠해져 있는 부분이 아래부터 각각 n1, n2, n3에 들어갑니다. 4byte 단위로 읽기 때문에 이와 같이 들어가는 것입니다.  
 - <img width="400" alt="{C0F9108F-6034-4ACE-A2B4-908A8BF6D30A}" src="https://github.com/user-attachments/assets/201ff777-953f-4a29-bf35-6e2075455466" />
 
 
