--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -1,7 +1,7 @@
 ### 📌 4.1 문자열 입출력하기
 - %c -> `%s`(string으로 변경)
 - 일반적인 char fruit_name이었으면, &fruit_name으로 주소를 가져왔겠지만,   
-	fruit_name[40]은 char type 40개 메모리 공간을 대표하는 주소가 되어버리기 때문에 &(ampersand) 삭제  
+  fruit_name[40]은 char type 40개 메모리 공간을 대표하는 주소가 되어버리기 때문에 &(ampersand) 삭제  
   `C에서 배열의 이름(변수명) 자체가 배열의 첫 번째 요소의 주소를 의미`
 ``` c
 #include <stdio.h>
@@ -331,7 +331,9 @@ int main()
 
 
 ### 📌 4.9 printf() 함수가 인자(Argument)들을 해석하는 과정
-- <img width="600" alt="image" src="https://github.com/user-attachments/assets/ffc499de-4081-4349-b082-0e6fd11c60bb" />
+
+<img width="600" alt="image" src="https://github.com/user-attachments/assets/ffc499de-4081-4349-b082-0e6fd11c60bb" />
+
 ``` c
 #include <stdio.h>
 
@@ -367,12 +369,14 @@ int main()
   `8byte 단위로 끊어 읽고 이 8byte에서 %d로 인해 4byte씩 읽게 되므로` 1024인 n3은 이에 영향받지 않고 그대로 출력될 수 있었던 것입니다.  
 - `(x32)32bit 환경은 4byte씩 읽는 시스템`입니다.  
   분홍색으로 칠해져 있는 부분이 아래부터 각각 n1, n2, n3에 들어갑니다. 4byte 단위로 읽기 때문에 이와 같이 들어가는 것입니다.  
-- <img width="400" alt="{C0F9108F-6034-4ACE-A2B4-908A8BF6D30A}" src="https://github.com/user-attachments/assets/201ff777-953f-4a29-bf35-6e2075455466" />
+  <img width="400" alt="{C0F9108F-6034-4ACE-A2B4-908A8BF6D30A}" src="https://github.com/user-attachments/assets/201ff777-953f-4a29-bf35-6e2075455466" />
 
 
 ### 📌 4.10 scanf() 함수의 사용법
-- <img width="700" src="https://github.com/user-attachments/assets/3fa0dac3-a223-4485-a97c-6f10736c6335" />  
-  <img width="700" src="https://github.com/user-attachments/assets/5e3e9f19-de03-423a-b4d8-a3661b8d66ab" />
+
+<img width="700" src="https://github.com/user-attachments/assets/3fa0dac3-a223-4485-a97c-6f10736c6335" />  
+<img width="700" src="https://github.com/user-attachments/assets/5e3e9f19-de03-423a-b4d8-a3661b8d66ab" />
+  
 ``` c
 #include <stdio.h>
 #include <inttypes.h> // intmax_t
