--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -414,7 +414,8 @@ int main()
 	printf("%f\n", d);   // f
 
 	/* Width */
-	//5글자까지만 받는다.
+        //printf -> 최소 너비 지정 (출력)
+	//scanf -> 최대 입력 길이 제한 (입력) = 5글자까지만 받는다.
 	char str[30];
 	scanf("%5s", str); // width
 	printf("%s\n", str);
