--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -415,7 +415,7 @@ int main()
 
 	/* Width */
         //printf -> 최소 너비 지정 (출력)
-	//scanf -> 최대 입력 길이 제한 (입력) = 5글자까지만 받는다.
+	//scanf -> 최대 입력 길이 제한 (입력) = 버퍼 오버플로우를 방지하기 위해 = 5글자까지만 받는다.
 	char str[30];
 	scanf("%5s", str); // width
 	printf("%s\n", str);
