--- a/C/5.0_Operator_Expression_Statement.md
+++ b/C/5.0_Operator_Expression_Statement.md
@@ -67,6 +67,75 @@ int main()
 
 
 ### 📌 5.4 곱하기 연산자
+``` c
+#include <stdio.h>
+
+int main()
+{
+	double seed_money = 0.0, target_money = 0.0, annual_interest = 0.0;
+
+	printf("Input seed money : ");
+	scanf("%lf", &seed_money);
+	printf("Input target money : ");
+	scanf("%lf", &target_money);
+	printf("Input annual interest (%%) : ");
+	scanf("%lf", &annual_interest);
+
+	double fund = seed_money;
+	int count = 0;
+
+	while (fund < target_money) {
+		//fund *= (1 + (annual_interest * 0.01));
+		fund += fund * (annual_interest * 0.01);
+		count++;
+		printf("%dy = %f\n", count, fund);
+	}
+	printf("It takes %d years.\n", count);
+
+	return 0;
+}
+```
+
+
+### 📌 5.5 나누기 연산자
+- 정수/정수 결과가 float인데 %d로 받으면, `소수점 절삭. (반올림x)`
+  실수/정수 일 때는 `컴파일러가 자동으로 형 변환`을 해주는 것.
+``` c
+#include <stdio.h>
+
+int main()
+{
+	// 버림 !!!!!
+	printf("Integer divisions\n");
+	printf("%d\n", 14 / 7);	// 2
+	printf("%d\n", 7 / 2);	// 3   3.5 in floating division
+	printf("%d\n", 7 / 3);	// 2   2.333 in floating division
+	printf("%d\n", 7 / 4);	// 1   1.75 in floating division
+	printf("%d\n", 8 / 4);	// 2
+
+	printf("Truncating toward zero (C99)\n");
+	printf("%d\n", -7 / 2);	// -3   -3.5 in floating division
+	printf("%d\n", -7 / 3);	// -2   -2.333 in floating division
+	printf("%d\n", -7 / 4);	// -1   -1.75 in floating division
+	printf("%d\n", -8 / 4);	// -2
+
+	printf("\nFloating divisions\n");
+	printf("%f\n", 9.0 / 4.0);  // 2.250000
+	printf("%f\n", 9.0 / 4);    // 2.250000   Note: 4 is integer
+
+	return 0;
+}
+```
+
+
+### 📌 5.6 연산자 우선순위와 표현식 트리
+
+``` c
+
+```
+
+
+
 
 
 
