--- a/C/5.0_Operator_Expression_Statement.md
+++ b/C/5.0_Operator_Expression_Statement.md
@@ -128,7 +128,13 @@ int main()
 ```
 
 
-### 📌 5.6 연산자 우선순위와 표현식 트리
+### 📌 5.6 연산자 우선순위와 표현식 트리(Operator Precedence, Expression Tree)
+
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/96009f99-f9d3-43dd-b490-b8a89dc9fda4" />
+<img width="450" alt="image" src="https://github.com/user-attachments/assets/f78d97f1-e971-4bbd-a438-a5a5ec0de8fe" />
+
+- 연산자()은 형변환이나 함수호출할 때 기호(operator)이며,
+  수학적()은 우선순위를 위해 묶는 용도(primary expression)이므로 의미가 다르다.
 
 ``` c
 
