--- a/C/5.0_Operator_Expression_Statement.md
+++ b/C/5.0_Operator_Expression_Statement.md
@@ -137,9 +137,73 @@ int main()
   수학적()은 우선순위를 위해 묶는 용도(primary expression)이므로 의미가 다르다.
 
 
-### 📌 5.7 나머지 연산자
+### 📌 5.7 나머지 연산자(Modulus Operator)
+- 나눗셈(/)은 소수점 아래는 버려지고(truncation), 부호는 곱셈과 같은 규칙을 따르지만,  
+  나머지(%)는 앞에 있는 피연산자가 음수면, 결과값도 음수.
+``` c
+#include <stdio.h>
+
+int main()
+{
+	//review
+	int seconds = 0, minutes = 0, hours = 0;
+
+	printf("Input seconds : ");
+	scanf("%d", &seconds);
+
+	while (seconds >= 0)
+	{
+		minutes = seconds / 60;
+		seconds %= 60;
+
+		hours = minutes / 60;
+		minutes %= 60;
+
+		printf("%d hours, %d minutes, %d seconds\n", hours, minutes, seconds);
+
+		printf("Input seconds : ");
+		scanf("%d", &seconds);
+	}
+	printf("good bye");
 
 
+    ////test
+	//int Input_seconds = 0,
+	//	hours = 0,
+	//	minutes = 0,
+	//	seconds = 0;
+
+	//printf("Input seconds : ");
+	//scanf("%d", &Input_seconds);
+	//seconds = Input_seconds % 60;
+	//minutes = (Input_seconds - seconds) / 60 % 60;
+	//hours = (Input_seconds - seconds - minutes*60) / 3600;
+	//printf("%d hours, %d minutes, %d seconds", hours, minutes, seconds);
+
+	int div, mod;
+
+	div = 11 / 5;
+	mod = 11 % 5;
+	printf("div = %d, mod = %d\n", div, mod);  // 2 1
+
+	div = 11 / -5;
+	mod = 11 % -5;
+	printf("div = %d, mod = %d\n", div, mod);  // -2 1
+
+	div = -11 / -5;
+	mod = -11 % -5;// first operand is negative
+	printf("div = %d, mod = %d\n", div, mod);  // 2 -1
+
+	div = -11 / 5;
+	mod = -11 % 5;// first operand is negative
+	printf("div = %d, mod = %d\n", div, mod);  // -2 -1
+
+	return 0;
+}
+```
+
+
+### 📌 5.8 증가, 감소 연산자
 
 
 
