--- a/C/5.0_Operator_Expression_Statement.md
+++ b/C/5.0_Operator_Expression_Statement.md
@@ -204,6 +204,102 @@ int main()
 
 
 ### 📌 5.8 증가, 감소 연산자
+- while (count++ < 5) -> Postfix는 ~~조건 비교~~ 후 +1을 한다.  
+  printf("%d ", count++); -> 동일하게, Postfix는 ~~출력~~ 후 +1을 한다.  
+  i_post = i++; -> 1을 i_post에 대입하고 1이 증가한다.  
+  => `Prefix(++i) : 선 증가, 후 사용` / `Postfix(i++) : 선 사용, 후 증가`  
+  증가, 감소 연산자는 `L-value에만 사용 가능`하다. (literal constant X)
+- 미정의 동작(Undefined Behavior, UB)
+  C 표준에서는 `한 표현식 내에서 같은 변수의 값이 변경되는 순서가 정의되지 않으면 UB가 발생`함.
+  UB가 발생하면, 컴파일러마다 다르게 동작하거나, 예측 불가능한 결과가 나올 수 있음.
+  (ex. 어떤 컴파일러는 y = 1 + 2로 평가하고, 어떤 컴파일러는 y = 2 + 1로 평가할 수 있음.)
+  => `한 표현식에서 같은 변수를 여러 번 변경하지 말 것.`
+  
+``` c
+#include <stdio.h>
+
+int main()
+{
+	// Prefix? Postfix?
+	// ex1
+	int a = 0;
+	// Postfix, 후위 연산자
+	a++;// a = a + 1 or a += 1; (short hand assign operator)
+	printf("%d\n", a);
+
+	// Prefix, 전위 연산자
+	++a;// a = a + 1 or a += 1;
+	printf("%d\n", a);
+
+
+	// ex2
+	double b = 0;
+	b++;
+	printf("%f\n", b);  //1.000000
+
+	++b;
+	printf("%f\n", b);  //2.000000
+
+
+	// ex3
+	int count = 0;
+	while (count < 5) // ++count : 1 2 3 4 / count++ : 1 2 3 4 5
+	{
+		printf("%d ", count++); // ++count : 1 2 3 4 5 / count++ : 0 1 2 3 4
+		//++count;  // 0 1 2 3 4
+	}
+
+	// ex4
+	int i = 1, j = 1;
+	int i_post, pre_j;
+
+	i_post = i++;  // 1을 i_post에 대입하고 1이 증가한다.
+	pre_j = ++j;
+
+	printf("%d %d\n", i, j);			// 2 2
+	printf("%d %d\n", i_post, pre_j);	// 1 2
+
+
+	// ex5 - 감소 연산자
+	int i = 3;
+	int l = 2 * --i;
+	printf("%d %d\n", i, l);  // 2 4
+
+	i = 1;
+	l = 2 * i--;
+	printf("%d %d\n", i, l);  // 0 2
+
+
+	// very high precedence
+	int x, y, z;
+	x = 3, y = 4;
+	z = (x + y++) * 5;// (x+y)++ or x+(y++) ?
+	printf("%d %d %d", x, y, z);  // 3 5 35
+	
+	// ++ and -- affect modifiable values 
+	int x = 1, y = 1, z;
+	z = x * y++;// (x) * (y++), not (x*y)++
+	//z = (x * y)++;//error  -> (x*y)은 R-Value니까.
+	//z = 3++;//error
+
+	// Bad practices -> 미정의 동작(Undefined Behavior, UB)
+	int n = 1;
+	printf("%d %d", n, n * n++);
+	int x = n / 2 + 5 * (1 + n++);
+	int y = n++ + n++;
+
+	return 0;
+```
+
+
+### 📌 5.9 표현식과 문장(Expressions, Statements)
+
+
+
+
+
+
+
 
 
 
