--- a/C/5.0_Operator_Expression_Statement.md
+++ b/C/5.0_Operator_Expression_Statement.md
@@ -293,15 +293,36 @@ int main()
 
 
 ### 📌 5.9 표현식과 문장(Expressions, Statements)
+- q = 5 * 2;  
+  위의 Expression에서는 5*2를 10으로 `연산하는 것이 주 목적`이고, q에 10을 대입하는건 `side effect`(2차 효과)이다.
+  (Side effect란, 연산 결과 외에 `변수를 변경하는 부가적인 효과`를 의미하므로, 여기서 q에 값이 저장되는 것이 side effect임.)  
+  <img width="500" alt="image" src="https://github.com/user-attachments/assets/a52691cf-2874-4565-92fb-a4a42bd8420f" />
+
+- `1 + 2;는 Expression Statement`지만, `결과를 사용하지 않아 아무 효과가 없음.`  
+  (Expression + ; → Statement가 됨.)  
+  x = 1 + (y = 5);는 내부적으로 y = 5를 먼저 수행한 후, x = 1 + 5를 수행함.  
+  <img width="500" alt="image" src="https://github.com/user-attachments/assets/ea070bc2-de2c-4201-b7ab-b618c2ffeaa0" />
+
+- Sequence point : 값을 언제 계산하는지.  
+  `Sequence Point는 ; 자체가 아니라, ; 이전의 전체 Expression이 끝나는 시점.`  
+  x++는 Statement가 끝날 때(즉, Full Expression이 끝날 때) sequence point라고 간주하고, 조건식 평가 후 증가 연산이 수행
+  undefined behavior 발생 가능성이 있으니, 한 문장 안에서 증감 연산자를 두번 이상 사용하지 말자.  
+  <img width="500" alt="image" src="https://github.com/user-attachments/assets/c3e03bc3-d1c3-4d5b-a94d-0fa7313bd14c" />
+
+
+### 📌 5.10 순서도(Flowcharts)
+
+<img width="1137" alt="image" src="https://github.com/user-attachments/assets/ce61402f-0aa9-42cb-ae38-7a8dd15223c3" />
+
+
+### 📌 5.11 자료형 변환
 
 
 
 
 
 
-
-
-
+### 📌 5.12 함수의 인수와 매개변수
 
 
 
