--- a/C/5.0_Operator_Expression_Statement.md
+++ b/C/5.0_Operator_Expression_Statement.md
@@ -315,17 +315,102 @@ int main()
 <img width="1137" alt="image" src="https://github.com/user-attachments/assets/ce61402f-0aa9-42cb-ae38-7a8dd15223c3" />
 
 
-### 📌 5.11 자료형 변환
+### 📌 5.11 자료형 변환(Type Conversions)
+- promotions in assignments(형 확장) : 작은 데이터형을 큰 데이터형에 할당하는 것은 `데이터 손실 없이 변환`  
+  demotion in assignments(형 축소) : 큰 데이터형을 작은 데이터형에 할당하면 `truncation(값 손실) 가능`  
+  11.25는 1 1/4로 정확하게 표현 가능하므로, float에서도 문제가 되지 않음. (=compiler에 따라 에러가 발생하지 않을수도)  
+``` c
+	// promotions in assignments
+	short s = 64;
+	int i = s;
+
+	float f = 3.14f;
+	double d = f;
+
+	// demotion in assignments
+	d = 1.25;
+	f = 1.25;  // warning C4305: '=': truncation from 'double' to 'float'
+	f = 1.123;
+```
+- Ranking : real number > inteager
+  cpu는 다른 자료형끼리 더하는 것이 불가하다.  
+``` c
+	float f = 0.0f;
+	double d = 0.0;
+
+	d = f + 1.234;
+	f = f + 1.234;  // warning C4244: '=': conversion from 'double' to 'float', possible loss of data
+```
+- automatic promotion of function arguments : 함수 인자(Arguments)의 자동 형 변환
+  1. `Functions without prototypes` : 프로토타입이 없는 함수 (Old-Style)
+     C89에서는 함수 선언 시 프로토타입을 명시하지 않을 수 있었음.
+     이 경우, 전달된 인자는 자동으로 형 변환(Promotion)됨.
+     C99 이후부터는 함수 프로토타입이 필수적이라 잘 쓰이지 않음.
+     - 함수 프로토타입의 필요 요소
+       반환 타입 (Return Type) / 함수 이름 (Function Name) -> int add  
+       매개변수 타입 (Parameter Types) / 매개변수 개수 (Number of Parameters) -> (int a, int b)
+  2. `Variadic functions` (ellipsis) (ex. printf()) : 인자가 변할 수 있는 경우
+     printf() 같은 가변 인자 함수는 전달받는 인자의 개수가 변할 수 있음.
+     이 경우에도 작은 타입은 자동으로 형 변환됨. (char → int, short → int, float → double)
+     (ex. int printf(const char *format, ...);  // '...'는 가변 인자를 의미) <<<<< 추가 공부 필요.
+
+- casting operators(형 변환)  <<- 많이 사용하게 될 것.
+  (int)1.7은 1이다.(절삭)
+``` c
+	double d = 0.0;
+	int i;
+
+	d = (double)3.14f;
+	i = 1.6 + 1.7;  // 3
+	i = (int)1.6 + (int)1.7;  // 2
+```
+``` c
+	// more examples
+	char c;
+	int i;
+	float f;
+	f = i = c = 'A';// 65
+	printf("%c %d %f\n", c, i, f);  // A 65 65.000000
+	c = c + 2;// 'C', 67
+	i = f + 2 * c;// 65.0f + 2 * 67
+	printf("%c %d %f\n", c, i, f);  // C 199 65.000000
+	c = 1106;// demolition, 1106 = 0b100'01010010',  0b01010010 = 1106 % 256 = 82 = 'R'
+	printf("%c\n", c);  // R
+	c = 83.99;
+	printf("%c\n", c);  // S
+```
 
 
+### 📌 5.12 함수의 인수와 매개변수(Arguments vs. Parameters)
+- 함수 draw는 변수 n을 매개변수로 받아서 정의된 함수.  
+  `함수를 호출`할 때, draw(i)와 같이 i를 전달하면 `i는 함수의 인자(argument)`  
+  `함수 정의`에서 int n과 같이 변수를 선언하면, 이 변수 `n은 매개변수(parameter)`  
+``` c
+#include <stdio.h>
 
+void draw(int n);	// ANSI function prototype declaration
 
+int main()
+{
+	int i = 5;
+	char c = '#';	// 35
+	float f = 7.1f;
 
+	draw(i);
+	draw((int)c);  // promotion
+	draw((int)f);  // casting operation
 
-### 📌 5.12 함수의 인수와 매개변수
+	/* Arguments vs. Parameters */
+	// actual argument, actual parameter -> argument (values)
+	// formal argument, formal parameter -> parameter (variables)
 
+	return 0;
+}
 
-
-
-
-
+void draw(int n)
+{
+	while(n-- > 0)
+		printf("*");
+	printf("\n");
+}
+```
