--- a/C/6.0_Iteration.md
+++ b/C/6.0_Iteration.md
@@ -1,5 +1,39 @@
 ### 📌 5.1 while 반복 루프에서 scanf()의 반환값 사용하기
-- 
+- scanf()는 `성공적으로 변환된 항목의 개수를 반환`
+  
 ``` c
+#include <stdio.h>
 
+int main()
+{
+	//int num, sum = 0, status;
+
+	//printf("Enter an integer (q to quit) : ");
+	//status = scanf("%d", &num);
+	////printf("status : %d\n", status);
+
+	//while (status == 1)  // equality operator
+	//{
+	//	sum += num;
+	//	printf("sum = %d\n", sum);
+
+	//	printf("Enter next integer (q to quit) : ");
+	//	status = scanf("%d", &num);
+	//	//printf("status : %d\n", status);
+	//}
+
+	//shortcut
+	int num = 0, sum = 0;
+
+	printf("Enter an integer (q to quit) : ");
+
+	while (scanf("%d", &num) == 1)  // equality operator
+	{
+		sum += num;
+		printf("Enter next integer (q to quit) : ");
+	}
+	printf("sum = %d\n", sum);
+
+	return 0;
+}
 ```
