--- a/C/6.0_Iteration.md
+++ b/C/6.0_Iteration.md
@@ -1,6 +1,6 @@
-### 📌 5.1 while 반복 루프에서 scanf()의 반환값 사용하기
-- scanf()는 `성공적으로 변환된 항목의 개수를 반환`
-  
+### 📌 6.1 while 반복 루프에서 scanf()의 반환값 사용하기
+- scanf()는 `성공적으로 변환된 항목의 개수를 반환`  
+  while (scanf("%d", &num) == 1)  <<- C-style.  
 ``` c
 #include <stdio.h>
 
@@ -37,3 +37,104 @@ int main()
 	return 0;
 }
 ```
+
+
+### 📌 6.2 의사 코드 Pseudo Code
+- 프로그래밍 언어나 문법이 아니라 알고리즘에 집중하기 위해 작성.  
+<img width="600" alt="image" src="https://github.com/user-attachments/assets/c8bada00-7e51-440a-9164-40ad3355e7fc" />  
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/34edf87f-ed32-4e53-8e5d-2b1f5c4bd6e5" />  
+
+
+### 📌 6.3 진입조건 루프 while(Entry-Condition Loop)
+- while() : 진입조건을 평가하고 만족시켰을 때 반복이 되는 블럭  
+  indenting 개념.
+``` c
+#include <stdio.h>
+
+int main()
+{
+	//while문 작성법
+	//while (expression)  <- 0이면 중단, 0이 아니면 실행.
+	//	statement         <- process
+
+
+	int i;
+
+	//i가 변하지 않아서 infinite loop (iteration, 반복)
+	i = 1;
+	while (i < 5)
+		printf("Hi!\n");
+
+	//wrong direction : --i라서
+	i = 1;
+	while(--i < 5)
+		printf("Hi!\n");
+
+	//cannot enter : i 초기값 문제
+	i = 10;
+	while (i++ < 5)
+	{
+		printf("Hi\n");
+	}
+
+	//correct!
+	i = 1;
+	while (i < 5)
+	{
+		printf("i before = %d\n", i);
+		i++;
+		printf("i after = %d\n", i);
+	}
+
+
+	//Common mistakes : indenting(들여쓰기 / c, c++에서는 블럭은 중괄호가 필요.)
+	//반복문 내부에는 첫 번째 한 줄만 포함됨
+	i = 0;
+	while (i < 3)
+		printf("%i\n", i);
+		i++;
+
+	//null statement
+	i = 0;
+	while (i++ < 3);  // semicolon error point
+		printf("%i\n", i);
+
+	//ok, but...
+	while (scanf("%d", &i) == 1)
+		;// null statement
+	// do something (?)
+
+	return 0;
+}
+```
+
+
+### 📌 6.4 관계 연산자 
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 📌 6.5 
+### 📌 6.6 
+### 📌 6.7 
+### 📌 6.8 
+### 📌 6.9 
+### 📌 6.10 
+
+
+
+
+
+
+
+
+
