--- a/C/6.0_Iteration.md
+++ b/C/6.0_Iteration.md
@@ -110,6 +110,89 @@ int main()
 
 
 ### 📌 6.4 관계 연산자(Relational Operators)
+- real number compare에서는 =!를 잘 쓰지 않는다.  
+  fabs() : 절대값 반환 함수 (#include <math.h> 필요)
+``` c
+#include <stdio.h>
+#include <math.h>	//fabs()
+
+int main()
+{
+	//Relational Operators
+	//<		is less than
+	//<=		is less than or equal to
+	//==		is equal to
+	//>=		is greater than or equal to
+	//>		is greater than
+	//!=		is not equal to
+	
+	// n++ < 5 is a relational expression
+	int n = 0;
+	while (n++ < 5)
+		printf("%d ", n);
+	printf("\n");
+
+	//not equal
+	char c = 'A';
+	while (c != 'Z')
+		printf("%c ", c++);
+
+	//real number compare에서는 =!를 잘 쓰지 않는다.
+	const double PI = 3.1415926535897932384626433832795;
+	double guess = 0.0;
+
+	printf("Input PI : ");
+	scanf("%lf", &guess);
+	//while (guess != PI)
+	while (fabs(guess - PI) > 0.001)  // 절대값 리턴 함수
+	{
+		printf("Fool! Try again.\n");
+		scanf("%lf", &guess);
+	}
+
+	printf("Good!");
+
+	return 0;
+}
+```
+
+
+### 📌 6.5 사실과 거짓
+- 0이면 false이고, 그 외에는 True이다.
+``` c
+#include <stdio.h>
+
+int main()
+{
+	// expression은 값을 가진다.
+	int tv, fv;
+	tv = (1 < 2);
+	fv = (1 > 2);
+
+	//printf("True is %d\n", tv);  //True is 1
+	//printf("False is %d\n", fv);  //False is 0
+
+	// 0만 false이고, 양수 음수는 true이다.
+	// = 0이면 false이고, 그 외에는 True이다.
+	int i = 5;
+	while (i)
+		printf("%d is true\n", i--);
+	printf("%d is false\n", i);
+
+	// infinite loop : 계속 작동하는 것을 가정할 때
+	while (1)
+	{
+
+	}
+
+	return 0;
+}
+```
+
+
+### 📌 6.6 _Bool 자료형
+- C99에서 _Bool이 추가되었다. (_는 해당 자료형이 없는 코드들과의 호환성 유지 때문이다.)
+- 
 
 
 
@@ -122,9 +205,6 @@ int main()
 
 
 
-
-### 📌 6.5 
-### 📌 6.6 
 ### 📌 6.7 
 ### 📌 6.8 
 ### 📌 6.9 
