--- a/C/6.0_Iteration.md
+++ b/C/6.0_Iteration.md
@@ -47,7 +47,7 @@ int main()
 
 ### 📌 6.3 진입조건 루프 while(Entry-Condition Loop)
 - while() : 진입조건을 평가하고 만족시켰을 때 반복이 되는 블럭  
-  indenting 개념.
+  `indenting` 개념.
 ``` c
 #include <stdio.h>
 
@@ -111,7 +111,7 @@ int main()
 
 ### 📌 6.4 관계 연산자(Relational Operators)
 - real number compare에서는 =!를 잘 쓰지 않는다.  
-  fabs() : 절대값 반환 함수 (#include <math.h> 필요)
+  `fabs()` : 절대값 반환 함수 (#include <math.h> 필요)
 ``` c
 #include <stdio.h>
 #include <math.h>	//fabs()
@@ -158,7 +158,7 @@ int main()
 
 
 ### 📌 6.5 사실과 거짓
-- 0이면 false이고, 그 외에는 True이다.
+- `0이면 false`이고, 그 외에는 True이다.
 ``` c
 #include <stdio.h>
 
@@ -191,8 +191,53 @@ int main()
 
 
 ### 📌 6.6 _Bool 자료형
-- C99에서 _Bool이 추가되었다. (_는 해당 자료형이 없는 코드들과의 호환성 유지 때문이다.)
-- 
+- C99에서 _Bool이 추가되었다. (_는 해당 자료형이 없는 코드들과의 호환성 유지 때문이다.) (#include <stdbool.h>)
+- `Conditional Operator`(삼항연산자) : (?:)  
+  형식 : 변수 ? (True) : (False)
+``` c
+#include <stdio.h>
+#include <stdbool.h>
+
+int main()
+{
+	int i;
+	i = 5;  // assignment operator
+	i == 5;  // comparison operator
+	5 = i;  // literal constant는 L-Value로 사용 불가.
+	5 == i;
+
+	// 보통 while 옆에는 comparison operator가 포함된 expression이 들어가는 것이 맞다.
+	while (i = 5) {/*do something*/ };  (x)
+	while (i == 5) {/*do something*/ };  (o)
+
+
+	// _Bool도 내부적이로는 정수형으로 처리를 한다.
+	_Bool boolean_true = (2 > 1);
+	_Bool boolean_false = (1 > 2);
+
+	printf("True is %d\n", boolean_true);
+	printf("False is %d\n", boolean_false);
+
+	// 조건 연산자
+	printf(boolean_true ? "true" : "false");
+	printf("\n");
+	printf(boolean_false ? "true" : "false");
+
+	// stdbool.h 안에 #define으로 대체되고 있다.
+	bool bt = true;
+	bool bf = false;
+
+	printf("True is %d\n", bt);
+	printf("False is %d\n", bf);
+
+	return 0;
+}
+```
+
+
+### 📌 6.7 관계 연산자의 우선순위
+- Operators Precedence in C  
+  <img width="300" alt="image" src="https://github.com/user-attachments/assets/124dabda-8546-4bdf-bca3-3f0c87e7daaa" />
 
 
 
@@ -205,7 +250,11 @@ int main()
 
 
 
-### 📌 6.7 
+
+
+
+
+
 ### 📌 6.8 
 ### 📌 6.9 
 ### 📌 6.10 
