--- a/C/6.0_Iteration.md
+++ b/C/6.0_Iteration.md
@@ -238,6 +238,128 @@ int main()
 ### 📌 6.7 관계 연산자의 우선순위
 - Operators Precedence in C  
   <img width="300" alt="image" src="https://github.com/user-attachments/assets/124dabda-8546-4bdf-bca3-3f0c87e7daaa" />
+``` c
+#include <stdio.h>
+
+int main()
+{
+	int x = 1, y = 2, z;
+
+	x > y + 2;
+	x > (y + 2);  // additive > relational
+
+	x = y > 2;
+	x = (y > 2);  // relational > assignment
+
+	x != y == z;
+	(x != y) == z;  // equality(same lv) is start at left.
+
+	return 0;
+}
+```
+
+
+### 📌 6.8 for 루프 소개
+- Indefinite loop vs. Counting loop  
+  while문 : Indefinite loop. 진입조건만 고려하기 때문. 하지만 Counting loop로 활용하는 경우가 많다.  
+  for문 : Counting loop 작성에 효율.
+  -> `Counter initialization; Counter check; Counter change` = for(initialize; test; update)
+``` c
+#include <stdio.h>
+
+int main()
+{
+	//                     // Counting Loop
+	//int i;
+
+	//i = 1;               // 1. Counter initialization
+
+	//while (i <= 10)	   // 2. Counter check
+	//{
+	//	printf("%d ", i);  // 3. Counter change
+	//	i++;
+	//}
+
+	int i;
+
+	for (i = 1; i <= 10; i++)  // Counter initialization; Counter check; Counter change
+		printf("%d ", i);
+	
+	return 0;
+}
+```
+<img width="450" alt="image" src="https://github.com/user-attachments/assets/bba99efe-1ffe-4fa0-9aed-e192ddc07913" />
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/2cac5159-d636-47ea-a140-69f1918537c9" />
+
+
+### 📌 6.9 for는 유연해요
+- prefix, postfix.
+  `for문`은 초기화, 조건식, 증감식. 이 각각의 부분은 독립적인 실행 단위로,  
+  조건식에 들어가는 i--나 --i는 이미 증감식이 실행된 후, 새로운 값이 조건식에 들어감.  
+  이 부분은 `한 실행단위로 취급`되므로 조건을 비교할 때는 증감된 값이 사용됩니다.  
+  `printf 함수`는 `단일 실행문`이기 때문에 후위 연산자(i--)는 출력 후 감소가 발생하고, 전위 연산자(--i)는 출력 전에 감소가 발생
+  >>> 결론 : for문에서는 조건 비교에서 이미 증감된 값이 사용되고, printf에서는 출력 시점에서 차이가 발생.
+``` c
+#include <stdio.h>
+
+int main()
+{
+
+	//for(initialize; test; update)
+	//	statement
+
+
+	for (int i = 5; i > 0; i--)
+		printf("%d ", i);  // 5 4 3 2 1
+
+	for (int i = 5; i > 0; --i)
+		printf("%d ", i);  // 5 4 3 2 1
+
+	for (int i = 0; i < 20; i = i + 8)
+		printf("%d ", i);  // 0 8 16
+
+	for (char c = 'A'; c <= 'Z'; c++)
+		printf("%c ", c);  // A ~ Z
+
+	for (int i = 0; i * i < 10; i++)
+		printf("%d ",
+	 i);  // 0 1 2 3
+
+	// 같은 자료형은 다중 선언 가능.
+	for (int x = 1, y = 5; y <= 20; y = (++x * 3) + 10)  // !!! Prefix, Postfix 확인 !!!
+		printf("%d ", x);  // 1 2 3
+
+	for (int x = 1, y = 5; y <= 20; y = (x++ * 3) + 10)
+		printf("%d ", x);  // 1 2 3 4
+
+	for (double d = 100.0; d < 300; d = d * 1.1)
+		printf("%f\n", d);
+
+
+	// blank
+	int i, n;
+	n = 2;
+	for (i = 2; n < 10; /* left blank */)
+	{
+		n = n * i;
+		printf("%d\n", n);  // 4 8 16
+	}
+
+
+	// infinite loop
+	for (;;)  // while(1)
+		printf("I love you! ");
+
+	int i = 0;
+	for(printf("Let's go!\n"); i != 7; scanf("%d", &i))
+		;// null statement
+
+	return 0;
+}
+```
+
+
+### 📌 6.10 다양한 대입 연산자들 (그리고 어셈블리 코드 확인법)
 
 
 
@@ -249,15 +371,6 @@ int main()
 
 
 
-
-
-
-
-
-
-### 📌 6.8 
-### 📌 6.9 
-### 📌 6.10 
 
 
 
