--- a/C/6.0_Iteration.md
+++ b/C/6.0_Iteration.md
@@ -360,6 +360,209 @@ int main()
 
 
 ### 📌 6.10 다양한 대입 연산자들 (그리고 어셈블리 코드 확인법)
+``` c
+#include <stdio.h>
+
+int main()
+{
+	// +=, -=, *=, /=, %=
+
+	int i = 1024;
+
+	i = i + 10;
+	i += 10;
+
+	i %= 4;
+
+	i = i * (1 + 2);
+	i *= 1 + 2;
+	i *= (1 + 2);	// Check precedence
+
+	for (int i = 0; i < 10; i++)
+		;
+
+	return 0;
+}
+```
+<img width="300" alt="{F4FE89B0-1EE4-4914-9A66-AF8A0EB18317}" src="https://github.com/user-attachments/assets/2e8ac6c8-e795-4e51-b9dd-ec450c24ad01" />
+
+
+### 📌 6.11 콤마 연산자(Comma)
+- 후위 연산자가 영향을 미치는 부분은 즉시 계산에 반영되는 상황에서만 주의가 필요  
+  `comma is a sequence point !`
+  쉼표 연산자에 의해서 전체 표현식의 결과값은 마지막 표현식인 (y = 2)의 결과값, 즉 2가 됩니다.
+``` c
+#include <stdio.h>
+
+int main()
+{
+	for (int n = 1, nsqr = n * n; n < 10; n++, nsqr = n * n)
+		printf("%d %d\n", n, nsqr);
+
+	//Note that commas in printf() are not comma operators 
+	//but separators
+
+	int i, j;
+	i = 1;
+	i++, j = i;// comma is a sequence point
+	printf("%d %d\n", i, j);  // 2, 2
+
+	// operator precedence
+	int x, y, z;
+	z = x = 1, y = 2;
+	printf("x=%d, y=%d, z=%d \n", x, y, z);  // 1 2 1
+	z = (x = 1), (y = 2);
+	printf("x=%d, y=%d, z=%d \n", x, y, z);  // 1 2 1
+	z = ((x = 1), (y = 2));
+	printf("x=%d, y=%d, z=%d \n", x, y, z);  // 1 2 2
+
+	//int my_money = 123,456; // error
+	int my_money = (123, 456);
+	printf("%d\n", my_money);  // 456
+
+	return 0;
+}
+```
+
+
+### 📌 6.12 제논의 역설 시뮬레이션 예제
+``` c
+#include <stdio.h>
+
+int main()
+{
+	/*
+		Simulation of a Moving Object
+		 
+		- Speed = 1.0 m/s
+		- dt = 1.0 s
+		- Distance traveled during dt = Speed * dt
+
+		- Step 1 : 1.0 m/s * 1.0 s = 1.0 m, dist = 1.0 m
+		- Step 2 : 1.0 m/s * 1.0 s = 1.0 m, dist = 1.0 m + 1.0 m = 2.0 m
+		- Step 3 : 1.0 m/s * 1.0 s = 1.0 m, dist = 2.0 m + 1.0 m = 3.0 m
+		- ... ...
+	*/
+
+	/*
+		Zeno's Paradox
+
+		- Step 1 : 1.0 * 1.0 = 1.0, 1.0
+		- Step 2 : 1.0 * 0.5 = 0.5, 1.0 + 0.5 = 1.5
+		- Step 3 : 1.0 * 0.25 = 0.25, 1.5 + 0.25 = 1.75
+		... ...
+	*/
+
+	const double speed = 1.0;
+	const unsigned repeat_max = 100;
+
+	double dt = 1.0;
+	double time = 0.0;
+	double dist = 0.0;
+
+	for (unsigned i = 0; i < repeat_max; ++i)
+	{
+		dist += speed * dt;
+		time += dt;
+
+		printf("Elapsed time = %.10fs, Distance = %.10fm\n", time, dist);
+
+		dt *= 0.5;
+	}
+
+	return 0;
+}
+```
+``` c
+#include <stdio.h>
+
+int main()
+{
+	const double speed = 1.0;
+	const unsigned repeat_max = 50;
+
+	double time = 0.0;			// Elapsed time
+	double dist_arch = 0.0;		// Achilleus distance from start point
+	double dist_turtle = 1.0;	// rabbit distance from start point
+	double speed_arch = 10.0;
+	double speed_turtle = 0.001;
+	double dt = 0.01;
+	unsigned i;
+
+	printf("Time = %fs, dt = %fs, Archilleus = %fm, turtle = %fm\n",
+		time, dt, dist_arch, dist_turtle);
+
+	for (i = 0; i < repeat_max; ++i) {
+
+		dist_arch += speed_arch * dt;
+		dist_turtle += speed_turtle * dt;
+		time += dt;
+
+		printf("Time = %fs, dt = %fs, Archilleus = %fm, turtle = %fm\n",
+			time, dt, dist_arch, dist_turtle);
+
+		dt *= 0.5;
+	}
+
+	return 0;
+}
+```
+
+
+### 📌 6.13 탈출조건 루프 do while(Exit-Condition Loop)
+
+<img width="500" alt="image" src="https://github.com/user-attachments/assets/4f268cdf-ffbb-431a-bd4a-5f2ff9ec8738" />
+
+``` c
+#include <stdio.h>
+
+int main()
+{
+	const unsigned code = 337;
+	unsigned input_code = 0;
+
+	//while (input_code != code)
+	//{
+	//	printf("Enter secret code : ");
+	//	scanf("%u", &input_code);
+	//}
+
+	//printf("Good!\n");
+
+	do
+	{
+		printf("Enter secret code : ");
+		scanf("%u", &input_code);
+	}
+	while (input_code != code);
+
+	printf("Good!\n");
+
+	return 0;
+}
+```
+
+
+### 📌 6.14 어떤 루프를 사용할까?
+- 조건을 어디에서 검사할 것인가?  진입조건(for, while) vs 탈출조건(do while)
+  for → 반복 횟수가 정해진 경우  
+  while → 반복 전에 검사 (조건이 처음부터 거짓이면 실행 X)  
+  do-while → 최소 한 번은 실행해야 하는 경우
+<img width="500" alt="{A31F8B0D-C061-4414-A18D-9CB7A847065E}" src="https://github.com/user-attachments/assets/e9e031af-ae1b-4b93-b884-4261ea842537" />
+``` c
+#include <stdio.h>
+
+int main()
+{
+	int i = 0;
+	while (scanf("%d", &i) == 1);
+
+	return 0;
+}
+```
+
+
+### 📌 6.15 중첩된 루프들 (Nested)
 
 
 
@@ -370,6 +573,13 @@ int main()
 
 
 
+
+
+
+### 📌 6.15 
+### 📌 6.16 
+### 📌 6.17 
+### 📌 6.18 
 
 
 
