--- a/C/6.0_Iteration.md
+++ b/C/6.0_Iteration.md
@@ -563,6 +563,76 @@ int main()
 
 
 ### 📌 6.15 중첩된 루프들 (Nested)
+- outer loop에서 변화하는 변수가 inner loop에 반영.
+``` c
+// Q1
+#include <stdio.h>
+
+int main()
+{
+	for (unsigned i = 1; i < 5; ++i)
+	{
+		//for (char c = 'A'; c != 'L'; ++c)
+		for (char c = 'A'; c <= 'K'; ++c)
+		{
+			printf("%c ", c);
+		}
+		printf("\n");
+	}
+	
+	return 0;
+}
+```
+``` c
+// Q2
+#include <stdio.h>
+
+int main()
+{
+	const char start_c = 'A';
+	const char end_c = 'J';
+
+	char c;
+	int i;
+	
+	for (i = 0; i <= end_c - start_c; ++i)
+	{
+		for (c = start_c; c <= start_c + i; ++c)
+		{
+			printf("%c ", c);
+		}
+		printf("\n");
+	}
+
+	return 0;
+}
+```
+``` c
+// Q3
+#include <stdio.h>
+
+int main()
+{
+	const char start_c = 'A';
+	const char end_c = 'L';
+
+	char c;
+	int i;
+
+	for (i = 0; i <= end_c - start_c; ++i)
+	{
+		printf("%d ", i);
+		for (c = start_c + i; c <= end_c; ++c)
+		{
+			printf("%c ", c);
+		}
+		printf("\n");
+	}
+
+	return 0;
+}
+```
+
 
 
 
