--- a/C/6.0_Iteration.md
+++ b/C/6.0_Iteration.md
@@ -634,29 +634,161 @@ int main()
 ```
 
 
+### 📌 6.16 배열과 런타임 에러(Array, Runtime)
+- scanf("%d", my_numbers);  // 배열의 이름은 첫 번째 요소의 주소를 가리키기 때문에, my_numbers[0]에 값 할당.
+- Compile Error → 문법적으로 틀려서 컴파일이 안됨 (수정해야 실행 가능)  
+  Runtime Error → 컴파일은 되지만 실행 중 오류 발생 (예: 0으로 나누기, 배열 범위 초과 접근)
+``` c
+#include <stdio.h>
+
+#define NUM_DAYS 365
+
+int main()
+{
+	char my_chars[] = "Hello, World!";
+
+	int  daily_temperature[NUM_DAYS];
+	double stock_prices_history[NUM_DAYS];
+
+	printf("%zd\n", sizeof(stock_prices_history));  // 2920byte
+	printf("%zd\n", sizeof(double) * NUM_DAYS);
+	printf("%zd\n", sizeof(stock_prices_history[0]));  // 8byte
 
 
+	int  my_numbers[5];
+
+	my_numbers[0] = 1;	// subscripts, indices, offsets
+	my_numbers[1] = 3;
+	my_numbers[2] = 4;
+	my_numbers[3] = 2;
+	my_numbers[4] = 1024;
+
+	//scanf("%d", &my_numbers[0]);
+	scanf("%d", my_numbers);  // 배열의 이름은 첫 번째 요소의 주소를 가리키기 때문에, my_numbers[0]에 값 할당.
+
+	printf("%d\n", my_numbers[0]);
+	printf("%d\n", my_numbers[1]);
+	printf("%d\n", my_numbers[2]);
+	printf("%d\n", my_numbers[3]);
+	printf("%d\n", my_numbers[4]);
 
 
+	// Runtime Error
+	int  my_numbers[5];
+
+	my_numbers[5] = 123;// index error -> out of bound
+
+	my_numbers = 7;// compile error
+
+	printf("%d\n", my_numbers[5]);// out of bound
+
+	return 0;
+}
+```
 
 
+### 📌 6.17 for 루프를 배열과 함께 사용하기
+- for loop 쪼개쓰기 -> 하드웨어 가속 ? 병렬 처리 ? 멀티스레딩 ? GPU가속 ?
+- 디버깅 중에 Watch tab에 확인하고 싶은 변수명 기입 후 확인 가능.
+``` c
+// 1
+#include <stdio.h>
+
+#define SIZE 5
+
+int main()
+{
+	// 배열 사용의 Motivation
+	//int i1 = 0;
+	//int i2 = 1;
+	//int i3 = 2;
+	//// ... 이렇게 변수를 여러 개 선언하느니 묶음(배열)로 왕창 받아왔으면 좋겠다 !
+
+	//printf("%d\n", i1);
+	//printf("%d\n", i2);
+	//printf("%d\n", i3);
+	//// ... 
+
+	int my_arr[SIZE];
+
+	// prepare for array data
+	for (int i = 0; i < SIZE; ++i)
+		my_arr[i] = i * i;
+
+	// print array data
+	for (int i = 0; i < SIZE; ++i)
+		printf("%d ", my_arr[i]);
+
+	//TODO: try debugger
+
+	return 0;
+}
+```
+``` c
+// 2
+#include <stdio.h>
+
+#define SIZE 5
+
+int main()
+{
+	int my_array[SIZE];
+	int sum = 0;
+	int i;
+
+	printf("Enter %d numbers : ", SIZE);
+
+	for (int i = 0; i < 5; ++i)
+		scanf("%d", &my_array[i]);
+
+	for (int i = 0; i < 5; ++i)
+		sum += my_array[i];
+
+	printf("Sum = %d", sum);
+}
+```
 
 
+### 📌 6.18 루프 안에서 함수의 반환값 사용하기
+- 함수 사용법.
+- scope !  
+  _  
+  Global Scope (전역 변수) → `함수 외부에서 선언`된 변수, 프로그램 전체에서 접근 가능, 프로그램 종료 시까지 유지  
+  Local Scope (지역 변수) → `함수 내에서 선언`된 변수, 해당 함수 내부에서만 접근 가능, 블록 종료 시 소멸  
+  Block Scope (블록 변수) → `{} 블록 내부에서 선언`된 변수, 해당 블록 내부에서만 접근 가능, 블록 종료 시 소멸
+  _  
+  Function Scope (함수 매개변수) → `함수의 매개변수로 전달된 값`, 해당 함수 내부에서만 접근 가능, 함수 종료 시 `소멸`  
+  Static Scope (정적 변수) → `static` 키워드에 특정 블록 내에서만 접근 가능하지만 `값이 유지됨`, 해당 블록 내부, 프로그램 종료 시까지 유지  
+  File Scope (파일 제한 변수) → `static` 키워드에 해당 파일에서만 접근 가능, 해당 파일 내부, `프로그램 종료 시까지 유지`  
+- prototype !
+  Compiler : 코드에서 함수가 호출되면, 해당 함수의 프로토타입(선언부) 만 보고 문법적으로 문제가 없는지 검사.  
+  즉, "이런 함수가 있다!" 라는 정보만 확인하고 넘어가고, `함수의 실제 구현부(정의)는 나중에 확인.`  
+  Linker : 컴파일이 끝난 뒤, `링커가 실제 함수 정의(구현부)를 찾아 연결(링킹).`  
+  만약 함수의 정의가 없으면 "undefined reference" 같은 링커 오류가 발생하며,  
+  여러 개의 파일에서 함수를 가져와야 하는 경우에도 링커가 역할.
+  
+``` c
+#include <stdio.h>
 
+int calc(int x, int y);  // prototype
 
+int main()
+{
+	int base, exp;
 
+	while (scanf("%d, %d", &base, &exp) == 2)
+		printf("result : %d\n", calc(base, exp));
 
-### 📌 6.15 
-### 📌 6.16 
-### 📌 6.17 
-### 📌 6.18 
+	return 0;
+}
 
+int calc(int base, int exp)
+{
+	int result = 1;
 
+	for (int i = 0; i < exp; ++i)
+		result *= base;
 
-
-
-
-
-
-
-
+	return result;
+}
+```
