--- a/C/2.0_introduce_C.md
+++ b/C/2.0_introduce_C.md
@@ -26,7 +26,7 @@ int main(void)  // main define
 ```
 
 
-### 📌 2.2 c프로그램 훑어보기 / 각 문장들이 어떤 의미를 갖는지 설명.
+### 📌 2.2 전처리기, 변수 선언 / c프로그램 훑어보기
 - Preprocessor Instruction(전처리기) : `compile 하기 전에. 가져다쓰는 것.`  
   main 함수 정의 시작  
   variable declaration(변수 선언) : 메모리를 이만큼 사용하겠다!
