--- a/C/2.0_introduce_C.md
+++ b/C/2.0_introduce_C.md
@@ -85,9 +85,11 @@ int main()
 
 
 ### 📌 2.8 키워드와 예약어
-- C 언어에서 미리 정해진 단어로, `사용자가 변수명, 함수명 등으로 쓸 수 없는 단어`  
-  예약어는 "사용 불가능한 단어"의 전체 집합, 그중에서 실제 의미를 가지는 단어가 키워드.  
-  = 모든 키워드는 예약어이지만, 모든 예약어가 키워드는 아니다.
+- `키워드`: `컴파일러에서 특별한 의미를 가지는 단어`로, 변수 선언, 제어문 등에 사용됨. (C언어에서는 32개 존재)  
+  ex) int, break, do, return ,,,  
+  `예약어`: `현재는 사용되지 않지만`, 미래에 사용될 가능성이 있어 예약된 단어.  
+  → C언어에서는 키워드 = 예약어, 하지만 다른 언어에서는 다를 수 있음.  
+  → C 언어에서 미리 정해진 단어로, `사용자가 변수명, 함수명 등으로 쓸 수 없는 단어`
 
 
 ### 📌 2.9 함수 만들기
