--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -185,7 +185,7 @@ int main()
   > 1 0000 - 1         -->  0 -1         -> 4294967295
 
 
-### 📌 3.7 다양한 정수형들
+### 📌 3.7 다양한 정수형들🔥
 - 정수 자료형
 
 <img width="488" alt="Image" src="https://github.com/user-attachments/assets/287ae227-2e59-44be-9ff0-957d13da1421" />
@@ -248,7 +248,7 @@ int main()
 ```
 
 
-### 📌 3.9 고정 너비 정수(Fixed-width Integers) 🔥🔥
+### 📌 3.9 고정 너비 정수(Fixed-width Integers) 🔥
 - 왜 필요해?  
   `이식성`: `다른 운영체제나 컴파일러에서도 같은 크기의 메모리를 사용하도록 보장` (멀티 플랫폼 대비)  
   `일관성`: 변수의 크기가 예측 가능해서 메모리 관리가 수월함
