--- a/C/2.0_introduce_C.md
+++ b/C/2.0_introduce_C.md
@@ -37,7 +37,7 @@ int main(void)  // main define
 
 
 ### 📌 2.3 변수가 편리한 이유
- `메모리의 주소를 직접 다루지 않고도` 메모리의 데이터에 직접 접근할 수 있는것 처럼 사용가능하다. 일반적인 함수를 만들기 용이하다.
+- `메모리의 주소를 직접 다루지 않고도` 메모리의 데이터에 직접 접근할 수 있는것 처럼 사용가능하다. 일반적인 함수를 만들기 용이하다.
 
 
 ### 📌 2.4 자료형이 필요한 이유
