--- a/C/2.0_introduce_C.md
+++ b/C/2.0_introduce_C.md
@@ -32,13 +32,14 @@ int main(void)  // main define
   main 함수 정의 시작  
   variable declaration(변수 선언) : 메모리를 이만큼 사용하겠다!
   
-- *정의? 선언?*  
-  선언 (Declaration) : 자료형과 이름만 알려주고, 메모리를 할당하지 않습니다.  
+#### *Declaration? Definition?*
+- 선언 (Declaration) : 자료형과 이름만 알려주고, 메모리를 할당하지 않습니다.  
   정의 (Definition) : 자료형과 이름을 지정하면서 메모리도 할당합니다.
 
 
 ### 📌 2.3 변수가 편리한 이유
-- `메모리의 주소를 직접 다루지 않고도` 메모리의 데이터에 직접 접근할 수 있는것 처럼 사용가능하다. 일반적인 함수를 만들기 용이하다.
+- `메모리의 주소를 직접 다루지 않고도` 메모리의 데이터에 직접 접근할 수 있는것 처럼 사용가능하다.  
+   일반적인 함수를 만들기 용이하다.
 
 
 ### 📌 2.4 자료형이 필요한 이유
@@ -57,7 +58,7 @@ int main(void)  // main define
   int x=1, y=2, z=x+y -> 문법상 문제는 없지만, ⚠️ operation은 분리해서 작성하는 것이 실수가 적다.
 
   
-### 📌 2.6 printf() 함수의 기본적인 사용법
+### 📌 2.6 printf() = "print formatted"
 - printf는 "print formatted"의 줄임말로, `형식(format)을 지정해서 출력한다`는 의미  
   형식 지정자(Format Specifier) : %d, %f, %s 등 형식 지정자를 사용해 출력 형식을 조정
   
@@ -94,6 +95,7 @@ int main()
 
 
 ### 📌 2.9 함수 만들기
+#### int main() is entry point.
 - operating system이 프로그램을 실행시킬 때, `무조건 main 함수부터 불러온다.`  
   Why? 컴파일러가 `프로그램의 진입점(entry point)`를 main으로 설정하기 때문
 
